--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@types/react-burger-menu": "^2.8.7",
+    "@types/react-slick": "^0.23.13",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.455.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
